# pyLeTalker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  InitializeLeTalker.py  KinematicSource.py  KinematicSourceAsym.py  LeTalker.py  MANIFEST.in  Makefile  PlotLeTalkerWaveforms.py  RunAniKinematic_wGA.py  calc_pressures.py  calcflow.py  intermittent.py  make.bat  pyproject.toml  readme.md  requirements.txt  rk3m.py  rules_consconv.py  src_kinematic.py  zerocross.py
.github/workflows/: pub_docs.yml  test_n_pub.yml
docs/: .buildinfo  api_advanced.html  api_basic.html  api_reference.html  citations.html  examples.html  genindex.html  index.html  letalker.constants.html  letalker.core.html  letalker.elements.html  letalker.function_generators.html  letalker.typing.html  letalker.utils.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: api_advanced.rst  api_basic.rst  api_reference.rst  citations.rst  examples.rst  index.rst  letalker.constants.rst  letalker.core.rst  letalker.function_generators.rst  letalker.utils.rst
docs/_static/: copybutton.js
docs/examples/: audio.html  audio.ipynb  elements.html  elements.ipynb  functiongenerator_basics.html  functiongenerator_basics.ipynb  functiongenerator_step_mixin.html  (+4 more)
docs_src/: api_basic.rst  conf.py  letalker.constants.rst  letalker.core.rst  letalker.elements.rst  letalker.typing.rst  refs.bib  requirements.txt
sandbox/: aspiration_noise.ipynb  ltvf_disps.pkl  show_kinematic_model.ipynb  show_kinematic_model.py  show_ltvf_model.py  test_KinematicVocalFolds.py  test_LeTalkerVocalFolds.py  test_SixPointVocalTract.py  test_anoise.py  test_asym_kinematic_model.py  test_fgen_constant.py  test_fgen_flutter.py  test_fgen_interp.py  test_fgen_line.py  test_fgen_product.py  test_fgen_rosenberg.py  test_fgen_sine.py  test_fgen_step.py  test_fo_to_L.py  test_generators.py  test_generators_step.py  test_kinematic_model.py  test_kinematic_model_asym.py  test_klatt_flutter.py  test_letalker.ipynb  test_letalker3mvf.py  test_lip.py  test_lungs.py  test_noise.py  test_noise_gen.py  test_pitch.py  test_sim.py  test_sim_anoise.py  test_trachea.py  test_waverefl.py  test_waverefl_logger.py  test_waverefl_ss.ipynb  test_waverefl_step.ipynb
tests/: nb_test_core.py  test_KinematicVocalFolds.py  test_LeTalkerVocalFolds.py  test_elements.py  test_elements_util.py  test_function_generator_noise.py  test_kinematic_xi0ref.py  test_letalker_aspiration_noise.py  test_lips.py  test_sim.py  test_util.py  test_vocal_fold_base.py  test_vocalfolds_ag.py  test_vocalfolds_ug.py  test_wave_reflection_vt.py
(+136 files in other folders)
